--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
@@ -11,6 +11,16 @@ DIV.page {
                  display: inline-block;
                  width: 538px;
                }
+
+               .app-description{
+                 padding: 0;
+                 font-size: 15px;
+                 color: #383838;
+                 background: none;
+                 border: none;
+                 height: 60px;
+                 width : 100%;
+               }
                .app-buy{
                  width: 122px;
                  display: inline-block;
