--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -2,7 +2,7 @@
     .action-bar.not-transparent
         .container.panel-bg.buttons-toolbar
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
-            +ActionLink('appmarket', 'myapps').my-apps.toolbar-btn My Apps
+            +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
         +Carousel(self.getScreenshotPictures().getItems())
     .app-price-info
@@ -10,5 +10,11 @@
             h1=self.name
             span="By " + self.developerInfo.getName()
         .app-buy
-            +ActionLink('appmarket', 'install', [self.getId().valueOf()]).special-button.blue-button  Free
-        textarea(name = "app-description", class = "app-description")=self.description
+            appPrice = self.getApplicationPrice().getPrice() > 0 ? "$" + self.getApplicationPrice().getPrice() : "Free"
+
+        span.chlk-button.special-button.blue-button
+            span
+                span
+                    +ActionLink('appmarket', 'install', [self.getId().valueOf()])=appPrice
+
+        textarea(name = "app-description", class ="app-description")=self.description
