--- a/Chalkable.Web/assets/jade/controls/carousel.jade
+++ b/Chalkable.Web/assets/jade/controls/carousel.jade
@@ -5,5 +5,5 @@ mixin Carousel(pictures)
             each picture in pictures
                 li.img
                     img(src=picture.getPictureUrl())
-        .pagination
+        .carousel-pagination
 
