--- a/Chalkable.Web/assets/sass/partials/main/_buttons.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_buttons.scss
@@ -139,6 +139,14 @@
           family: Arial;
         }
       }
+
+      .action-link{
+        padding: 0;
+        text-decoration: none;
+        color: white;
+        background: none;
+        line-height: 45px;
+      }
     }
   }
 
@@ -254,6 +262,8 @@
           family: Arial;
         }
       }
+
+
     }
   }
 
