--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -25,6 +25,12 @@ BODY {
                     .title{
                       color: #51595d;
                       font-size: 30px;
+
+                      .chlk-button{
+                        font-size: 18px;
+                        margin-top: 10px;
+                        width: 65px;
+                      }
                     }
                     .app-status{
                       padding-top: 2px;
