--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_details.scss
@@ -26,7 +26,7 @@ DIV.page {
               .app-buy {
                 width: 122px;
                 display: inline-block;
-                vertical-align: middle;
+                vertical-align: top;
 
                 .action-link{
                   min-width: 90px;
