--- a/Chalkable.Web/assets/jade/activities/settings/admin-settings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/admin-settings.jade
@@ -7,4 +7,4 @@
         +ActionLink('schedule', 'list') Schedule
         +ActionLink('fund', 'info') Apps
     .right
-        +ActionLink('admin', 'info', self.personId) Profile
+        +ActionLink('admins', 'info', self.personId) Profile
