--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -11,7 +11,10 @@
             span="By " + self.developerInfo.getName()
         .app-buy
             appPrice = self.getApplicationPrice().getPrice() > 0 ? "$" + self.getApplicationPrice().getPrice() : "Free"
-            +ActionLinkButton('appmarket', 'install', [self.getId().valueOf()]).special-button.blue-button=appPrice
+            +ActionLinkButton('appmarket', 'tryToInstall', [self.getId().valueOf()]).special-button.blue-button=appPrice
+
+
+
 
         textarea(name = "app-description", class ="app-description", readonly)=self.description
         .app-general-info
@@ -21,5 +24,7 @@
                     .group-header This app is for:
                 .permissions-group
                     .group-header Info this app uses:
+                        each permission in self.getPermissions()
+                            .permission=permission.getName()
 
 
