--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
@@ -44,7 +44,7 @@
 
           .chlk-button{
 
-            .button{
+            button{
               width: 100px;
               font-size: 18px;
               font-weight: bold;
