--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -186,7 +186,7 @@
         <script type="text/javascript">
             var role = currentChlkPerson.role.name.toLowerCase();
             if (role == "admingrade" || role == "adminview" || role == "adminedit")
-                role = "admin";
+                role = "Admin";
             var roleAppScript = '@Chalkable.Web.Tools.CompilerHelper.ScriptsRoot' + '/app/' + role + 'App.compiled.js';
             (function(appUrl) {
                 var scr = document.createElement('script');
