--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -184,8 +184,8 @@
     else
     {
         <script type="text/javascript">
-            var role = currentChlkPerson.role.name.toLowerCase();
-            if (role == "admingrade" || role == "adminview" || role == "adminedit")
+            var role = currentChlkPerson.role.name;
+            if (role.toLowerCase() == "admingrade" || role.toLowerCase() == "adminview" || role.toLowerCase() == "adminedit")
                 role = "Admin";
             var roleAppScript = '@Chalkable.Web.Tools.CompilerHelper.ScriptsRoot' + '/app/' + role + 'App.compiled.js';
             (function(appUrl) {
