--- a/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
@@ -9,7 +9,7 @@
         .buttons-row
             +ActionLink('calendar', 'month').one-third-button.calendar(title="View Calendar") Calendar
             +ActionLink('message', 'page').one-third-button.messages(title="View Messages") Messages
-            +ActionLink('students', 'all').one-third-button.people(title="View People") People
+            +ActionLink('admins', 'people').one-third-button.people(title="View People") People
         .buttons-row
             +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
