--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -1,20 +1,18 @@
+app = self.getApp()
+devName = app.getDeveloperInfo().getName()
 .app-market-details
     .action-bar.not-transparent
         .container.panel-bg.buttons-toolbar
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
-        +Carousel(self.getScreenshotPictures().getItems())
+        +Carousel(app.getScreenshotPictures().getItems())
     .app-price-info
         .app-title
             h1=self.name
-            span="By " + self.developerInfo.getName()
+            span="By " + devName
         .app-buy
-            appPrice = self.getApplicationPrice().getPrice() > 0 ? "$" + self.getApplicationPrice().getPrice() : "Free"
-            +ActionLinkButton('appmarket', 'tryToInstall', [self.getId().valueOf()]).special-button.blue-button=appPrice
-
-
-
+            +ActionLinkButton('appmarket', 'tryToInstall', [app.getId().valueOf()]).special-button.blue-button=self.installBtnTitle
 
         textarea(name = "app-description", class ="app-description", readonly)=self.description
         .app-general-info
@@ -24,7 +22,7 @@
                     .group-header This app is for:
                 .permissions-group
                     .group-header Info this app uses:
-                        each permission in self.getPermissions()
+                        each permission in app.getPermissions()
                             .permission=permission.getName()
 
 
