fix in people in Ui renamed ClassAttendanceIdToNameConverter        to AttendanceTypeToNameConverter

--- a/Chalkable.Web/assets/jade/activities/teacher/StudentsList.jade
+++ b/Chalkable.Web/assets/jade/activities/teacher/StudentsList.jade
@@ -16,4 +16,4 @@
         input(type="hidden", name="my", value=self.isMy()))
         input(type="hidden", name="classId", value=self.getTopData().getSelectedItemId()))
         .users-list-container
-            +RenderWith(self.getUsersPart(), chlk.templates.people.UsersList)
+            +RenderWith(self.getUsersList(), chlk.templates.people.UsersList)
