--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementQnAs.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementQnAs.jade
@@ -5,26 +5,27 @@ each item, i in self.getAnnouncementQnAs()
             .avatar-container.left
                 +PersonImg(item.getQuestion().getPerson(), 47)
             p.left= item.getQuestion().getPerson().getFullName()
-            .left= item.getQuestion().getMessage()
-            input(type="text",name="question", value=item.getQuestion().getMessage()).x-hidden
-            +Button()(type="submit").special-button.blue-button.submit-btn.x-hidden Update
+            .left#edit-question-text= item.getQuestion().getMessage()
+            input(type="text",name="question", value=item.getQuestion().getMessage())#edit-question-input.x-hidden
+            +Button()(type="submit").special-button.blue-button.submit-btn.x-hidden#edit-question-btn Update
             if self.isOwner
-                a(href='javascript:', name='edit-question-link') edit
+                a(href='javascript:', name='edit-question-link')#edit-question-link edit
             .clear
 
         .row
             answered = (item.getState() == chlk.models.announcement.QnAState.ANSWERED)
-        .avatar-container.left
-            +PersonImg(item.getAnswer().getPerson(), 47)
-        p.left= item.getAnswer().getPerson().getFullName()
-        if answered || !self.isOwner
-            .left= item.getAnswer().getMessage()
-            if self.isOwner
-                a(href='javascript:', name='edit-answer-link') edit
-        else
-            input(type="text",name="answer", value=item.getAnswer().getMessage())
-            +Button()(type="submit").special-button.blue-button.submit-btn Update
-        .clear
+            hideEdit = answered || !self.isOwner
+            .avatar-container.left
+                +PersonImg(item.getAnswer().getPerson(), 47)
+            p.left= item.getAnswer().getPerson().getFullName()
+            dev(class = hideEdit ? "left" : "left x-hidden")#edit-answer-text= item.getAnswer().getMessage()
+            if answered && self.isOwner
+                a(href='javascript:', name='edit-answer-link')#edit-answer-link edit
+
+            input(type="text",name="answer", value=item.getAnswer().getMessage(), class=hideEdit ? "x-hidden" : "")#edit-answer-input
+            +Button()(type="submit"
+                , class=hideEdit ? "special-button blue-button submit-btn x-hidden" : "special-button blue-button submit-btn")#edit-answer-btn Update
+            .clear
 if !self.isOwner
     +ActionForm('announcement', 'askQuestion')
         label Question:
