--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -1,4 +1,4 @@
-valuesEnum = chlk.models.attendance.AttendanceTypesValue;
+valuesEnum = chlk.models.attendance.AttendanceTypeEnum;
 gradeLevel = self.getGradeLevelNumber();
 dt = getDate();
 classOf = dt.getFullYear() + 12 - gradeLevel;
