--- a/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
@@ -1,15 +1,37 @@
-mixin MyAppsIconLink(app)
+mixin MyAppsIconLink(app, editable)
     appId = app.getId().valueOf()
-    +ActionLink('apps', 'viewApp', [appId]).my-app-icon-link
-        .app-list-item
-            .icon
-                pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74)
-                img(src=pictureUrl)
+    if editable
+        +ActionForm('appmarket', 'tryToUninstall').my-app-icon-link
+
+            .app-list-item
+                .icon(class=editable ? "jiggly" : undefined)
+                    pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74)
+                    img(src=pictureUrl)
+                .name=app.getName()
+                Button(type="submit").close-btn
+            +Hidden('appName', app.getName())
+            +Hidden('applicationInstallIds', app.getApplicationInstallIds())
+            +Hidden('personal', app.isPersonal())
+            +Hidden('selfInstalled', app.isSelfInstalled())
+            +Hidden('uninstallable', app.isUninstallable())
+    else
+        +ActionLink('apps', 'viewApp', [appId]).my-app-icon-link
+            .app-list-item
+                //if editable
+                    +ActionLink('appmarket',  'uninstall', [app.getId().valueOf()]).close-btn
+                .icon(class=editable ? "jiggly" : undefined)
+                    pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74)
+                    img(src=pictureUrl)
+                .name=app.getName()
 .my-apps
     .action-bar.not-transparent
         .container.panel-bg.buttons-toolbar
+            if self.isEditable()
+                +ActionLink('appmarket', 'updateMyApps', [false]).edit.toolbar-btn Save
+            else
+                +ActionLink('appmarket', 'updateMyApps', [true]).edit.toolbar-btn Edit
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
     .apps
-        each app in self.items
-            +MyAppsIconLink(app)
+        each app in self.apps.getItems()
+            +MyAppsIconLink(app, self.isEditable())
