--- a/Chalkable.Web/assets/sass/partials/main/apps/_my_apps.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/_my_apps.scss
@@ -6,20 +6,29 @@ DIV.page {
         #main {
           DIV.my-apps{
 
-
-
             .apps{
               width: 670px;
-              margin-left: 70px;
 
               .my-app-icon-link{
                 display: inline-block;
                 text-decoration: none;
+                position: relative;
                 vertical-align: top;
+                cursor: pointer;
+                text-align: center;
+                margin-bottom: 15px;
+                width: 220px;
+                height: 106px;
 
                 .app-list-item{
                   width: 220px;
                   height: 106px;
+
+
+                  .close-btn{
+                    right: 60px;
+                    border: 0;
+                  }
 
                   .icon{
                     width: 80px;
@@ -34,13 +43,54 @@ DIV.page {
                       margin: 3px;
                     }
                   }
+                  .name{
+                    color: #51595d;
+                    font-weight: bold;
+                    font-size: 16px;
+                  }
                 }
               }
             }
+
+
+
           }
         }
       }
     }
   }
 }
+
+
+
+@-moz-keyframes jiggle {
+  0% {
+    -moz-transform: rotate(-1deg);
+  }
+  50% {
+    -moz-transform: rotate(1deg);
+  }
+}
+
+@-webkit-keyframes jiggle {
+  0% {
+    -webkit-transform: rotate(-1deg);
+  }
+  50% {
+    -webkit-transform: rotate(1deg);
+  }
+}
+
+.jiggly {
+  -webkit-animation: jiggle 0.2s infinite;
+  -moz-animation-duration: 0.2s;
+  -moz-animation-name: jiggle;
+  -moz-animation-iteration-count: infinite;
+  -moz-transform: rotate(-1deg);
+  -o-animation: jiggle 0.2s infinite;
+}
+
+
+
+
 
