--- a/Chalkable.Web/assets/sass/partials/controls/_select.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_select.scss
@@ -16,6 +16,10 @@
           background: url(images/common/select-arrows.png) no-repeat 9px center;
         }
       }
+
+      SPAN{
+        line-height: 26px;
+      }
     }
   }
 }
