--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -7,7 +7,7 @@ mixin AddEditReminderForm(announcement, reminders)
 
 
 //TODO refactor
-mixin BaseAnnouncementFormContainer(announcement, classId)
+mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId)
     +Hidden('id', announcement.getId().valueOf())
     +Hidden('announcementtypeid', announcement.getAnnouncementTypeId())
     +Hidden('statetyped', announcement.getStateTyped())
@@ -21,9 +21,30 @@ mixin BaseAnnouncementFormContainer(announcement, classId)
     +Hidden('announcementtypename', announcement.getAnnouncementTypeName())
 
     //+AnnouncementFormDescriptionBlock(announcement)
-    -typesEnum = chlk.models.announcement.AnnouncementTypeEnum;
-    -isAnnouncement = (announcement.getAnnouncementTypeId() == typesEnum.ANNOUNCEMENT.valueOf() || announcement.getAnnouncementTypeId() == typesEnum.ADMIN.valueOf());
+    typesEnum = chlk.models.announcement.AnnouncementTypeEnum;
+    isAdminAnnouncement = announcement.getAnnouncementTypeId() == typesEnum.ADMIN.valueOf();
+    isAnnouncement = (announcement.getAnnouncementTypeId() == typesEnum.ANNOUNCEMENT.valueOf() || isAdminAnnouncement);
     .left-block
+        if isAdminAnnouncement
+            .buttons-container
+                rolesEnum = chlk.models.common.RoleEnum;
+                buttons = ['Student', 'Teacher', 'Parent', 'Admin'];
+                each button in buttons
+                    roleName = button.toUpperCase();
+                    roleId = rolesEnum[roleName] ? rolesEnum[roleName].valueOf() : null;
+                    text = Msg[button](true).toLowerCase().capitalize();
+                    Button(
+                        type="button",
+                        data-roleId = roleId,
+                        data-id = roleId ? '0|' + roleId + '|-1|-1' : adminRecipientId,
+                        disabled = roleId == rolesEnum.PARENT.valueOf()
+                        class = button.toLowerCase() + '-button',
+                        value = roleId ? "All " + text : text
+                    ).admin-gray.new-input=text
+            .superboxselect.text-field
+                ul.super-selectbox-list
+                    +SearchBox(chlk.services.AdminService, "getUsers", chlk.templates.announcement.AdminUserSearch).super-selectbox-search
+            TEXTAREA.recipients-text.x-hidden
         if isAnnouncement
             TEXTAREA(id="subject",name="subject",placeholder="Subject")=announcement.getSubject()
         +TextArea(id="content",name="content",placeholder=isAnnouncement ? "Message" : "Assignment")=announcement.getContent()
@@ -33,11 +54,11 @@ mixin BaseAnnouncementFormContainer(announcement, classId)
     .right-block
         .date-picker-container
             +DatePicker('expiresdate', announcement.getExpiresDate())(
-            data-options={
-            showOtherMonths: true,
-            selectOtherMonths: true
-            },
-            class="validate[required]"
+                data-options={
+                    showOtherMonths: true,
+                    selectOtherMonths: true
+                },
+                class="validate[required]"
             )#expiresdate
         SPAN#reminders-button.small-gray-link=Msg.Reminder(true)
         .reminders-container.x-hidden
