--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -93,6 +93,54 @@ BODY {
           .panel-bg{
             @include background(linear-gradient(top, #f5f5f5,#e7e7e7));
           }
+
+          SELECT:focus{
+            outline: none;
+          }
+
+          INPUT, TEXTAREA, .text-field{
+            @include border-radius(5px);
+            background: #fff;
+            border-color: #9e9e9e transparent transparent transparent;
+            border-width: 1px 0 0 0;
+            border-style: solid;
+            padding: 5px;
+            color: #6e6e6e;
+            margin: 0;
+
+            &:focus{
+              outline: none;
+            }
+
+            &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder {
+               color: gray;
+            }
+
+            &:not(.text-field){
+              resize: vertical;
+            }
+          }
+
+          .new-input{
+            height: 21px;
+            padding: 1px 3px;
+            @include background(linear-gradient(top, #ffffff, #dadada));
+          }
+
+          .new-select, .new-input{
+            @include border-radius(5px);
+            text-align: center;
+            text-shadow: 1px 0px 0px white;
+            color: #9d9d9d;
+            border: 1px solid #c9c9c9;
+          }
+
+          .new-select{
+            margin: 0;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            @include background(url(images/common/select-arrows.png) no-repeat 114px center, linear-gradient(top, #ffffff, #dadada));
+          }
         }
       }
     }
@@ -121,21 +169,6 @@ $grey-color: #717171;
 .image-container {
   overflow: hidden;
   display: inline-block;
-}
-
-INPUT, TEXTAREA{
-  @include border-radius(5px);
-  background: #fff;
-  border-color: #9e9e9e transparent transparent transparent;
-  border-width: 1px 0 0 0;
-  padding: 5px;
-  resize: vertical;
-  color: #6e6e6e;
-  margin: 0;
-
-  &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder {
-     color: gray;
-  }
 }
 
 TEXTAREA.animated-textarea{
